remove formatted and replaced with String.format